# Vorax_Serpens

./: .gitignore  CMakeLists.txt  README.md  test.md  vorax_serpens_resources.rc
src/: Config.cpp  Config.hpp  Food.cpp  Food.hpp  Game.cpp  Snake.hpp  main.cpp
